overflow bug

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,11 @@ body {
     position: absolute;
     margin: 11px 0px 0px 50px;
     overflow: hidden;
+    height: 100%;
+}
+.tileBody {
+    overflow-y: scroll;
+    height: 100%;
 }
 /*
  * END GENERAL STYLES
